
  [ Julien Cristau ]
  * Add a new package for the intel-specific bits (libdrm-intel1)
  * Build-depend on pkg-config and libpthread-stubs0-dev (closes: #502078).
    Thanks, Frank Lichtenheld!
  * Don't mention *.la in libdrm-dev.install.
  * Make libdrm-dev depend on libdrm-intel1 on x86.
  * On Linux, let udev create the device files.

 -- Timo Aaltonen <tepsipakki@ubuntu.com>  Thu, 27 Nov 2008 09:33:05 +0200

libdrm (2.3.1-2) unstable; urgency=high

  * Remove from the source package a bunch of files that are only used by the
    kernel drm component.  This gets rid of the mga, r128 and radeon
    microcode, and thus closes: #502675.  Thanks, Ben Hutchings!

 -- Julien Cristau <jcristau@debian.org>  Sun, 19 Oct 2008 14:26:37 +0200

libdrm (2.3.1-1) unstable; urgency=low

  [ Brice Goglin ]
  * Update upstream URL in debian/copyright.
  * Bump Standards-Version to 3.7.3 (no changes).
  * Drop the XS- prefix from Vcs-Git and Vcs-Browser fields in debian/control.
  * Install the upstream ChangeLog.

  [ Julien Cristau ]
  * New upstream release (needed for mesa 7.1 and newer xserver).
  * Note: this release removes the memory manager (TTM) interface used by the
    i915tex dri driver.
  * debian/rules: don't call configure with --host if we're not
    cross-building, and fix some rules dependencies.

  [ Timo Aaltonen ]
  * Bump the shlibs to 2.3.1.

 -- Julien Cristau <jcristau@debian.org>  Sun, 13 Jul 2008 19:07:49 +0200

libdrm (2.3.0-4) unstable; urgency=low

  [ David Nusinow ]
  * Add NEWS.Debian explaining the change in the last upload to interested
    administrators.

  [ Julien Cristau ]
  * Upload to unstable.

 -- Julien Cristau <jcristau@debian.org>  Fri, 20 Apr 2007 05:06:34 +0200

libdrm (2.3.0-3) experimental; urgency=low

  * Add myself to uploaders
  * Patch libdrm to default to device permission 666 so we don't have to do it
    in xorg.conf. The only way libdrm can do anything is through the server